<resources>
    <!-- Welcome -->
    <string name="app_name">PARAD0X</string>
    <string name="edit_text_puzzle_id">Room ID</string>
    <string name="button_puzzle_code">Join Room</string>

    <!-- Home-->
    <string name="title_home">Home</string>
    <string name="text_win_message">YOU WIN</string>

    <!-- Converter-->
    <string-array name="conversion_type">
        <item>Binary</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>

    <!-- Leaderboard-->
    <string name="title_leaderboard">Leaderboard</string>

    <!-- Profile-->
    <string name="title_profile">Profile</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_logout">Logout</string>
    <string name="edit_text_biography_hint">Biography</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="text_join_room_message">Please join room first</string>
    <string name="text_sign_in_message">Please sign in first</string>
    <string name="get_roomids_at_the_parad0x_website">Get RoomIds at the Parad0x Website</string>
</resources>